@@ -13,7 +13,11 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.Map.Entry;
 
 import javax.persistence.EntityManager;
 import javax.persistence.TypedQuery;
@@ -54,7 +58,7 @@ import es.ucm.fdi.iw.model.Event.Access;
 import es.ucm.fdi.iw.model.Tags;
 import es.ucm.fdi.iw.model.User.Role;
 
-import es.ucm.fdi.iw.control.PrivateUtilities;
+import es.ucm.fdi.iw.control.Utilities;
 /**
  * User-administration controller
  * @author Carlos Olano
@@ -80,6 +84,7 @@ public class EventController {
 	private PasswordEncoder passwordEncoder;
 
 	@GetMapping("/")
+	@Transactional
 	public String index(Model model, HttpSession session) {
 		/**
 		 * logearse como invitado si no tiene sesion
@@ -87,8 +92,35 @@ public class EventController {
 		if (session.getAttribute("u") == null){
 			return "redirect:/user/guest";
 		}
-		model.addAttribute("event", entityManager.createQuery(
-					"SELECT u FROM Event u").getResultList());
+
+		//generate list event with user preferences tags
+		//first map with events duplicated
+		User me = entityManager.find(User.class, ((User)session.getAttribute("u")).getId());
+		List<Event> finalList = new ArrayList<Event>();
+		Map<Long,Event> mapEvents = new HashMap<Long,Event>();
+		log.warn("Generating Event List evnts with User Tags");
+		final List<Tags> userTags = new ArrayList<Tags>(me.getTags()); 
+		log.warn("Tags taken");
+		if(userTags.size() != 0){
+		for (Tags t : userTags){
+			log.info("Take all events with tag {}",t.getId());
+			List<Event> listAux = entityManager.createNamedQuery("Event.getEventsByTags", Event.class).setParameter("idCat", t.getId()).getResultList();
+			for (Event e : listAux){
+				log.info("Adding Event to Map");
+				mapEvents.put(e.getId(),e);
+			}
+		}
+		//generate final clean list
+		log.warn("Cleaning final list events with user tags");
+		for(Entry<Long,Event> p : mapEvents.entrySet()){
+			finalList.add(p.getValue());
+		}
+		} else {
+			finalList = entityManager.createNamedQuery("Event.all", Event.class).getResultList();
+		}
+		model.addAttribute("event",finalList);
+		//model.addAttribute("event", entityManager.createQuery(
+		//			"SELECT u FROM Event u").getResultList());
 		TypedQuery<Tags> query= entityManager.createNamedQuery("Tag.getCategories", Tags.class);
 		List<Tags> categories= query.getResultList();
 		model.addAttribute("category", categories);
@@ -107,6 +139,10 @@ public class EventController {
 		model.addAttribute("user", requester);
 		model.addAttribute("newEvent", true);
 		model.addAttribute("viewEvent", false);
+		model.addAttribute("action", "newEvent");
+		model.addAttribute("buttonName", "Crear");
+		model.addAttribute("access", true);
+		model.addAttribute("formStyle", "eventContainer formEvento");
 		model.addAttribute("categories", categories);
 		return "event";
 	}
@@ -117,11 +153,12 @@ public class EventController {
 			@RequestParam String description, @RequestParam String date, 
 			@RequestParam String agePreference, @RequestParam String genderPreference,
 			@RequestParam String location, @RequestParam Long category,
+			@RequestParam(value = "isHiddenDate", required = false) String isHiddenDate, 
+			@RequestParam(value = "isHiddenDirection", required = false) String isHiddenDirection,
 			@RequestParam String tagsAll, HttpSession session) {
 
-			PrivateUtilities privateUtilities = new PrivateUtilities();
-			List<String> wordsToCheck = new ArrayList(List.of(name,description,date,agePreference,genderPreference,location,tagsAll));
-			if (!privateUtilities.checkStrings(wordsToCheck)){
+			List<String> wordsToCheck = Arrays.asList(name,description,date,agePreference,genderPreference,location,tagsAll);
+			if (!Utilities.checkStrings(wordsToCheck)){
 				User requester = (User)session.getAttribute("u");
 				requester = entityManager.find(User.class, requester.getId());
 				model.addAttribute("user", requester);
@@ -134,8 +171,10 @@ public class EventController {
 				newEvent.setLocation(location);
 				newEvent.setAgePreference(agePreference);
 				newEvent.setGenderPreference(genderPreference);
+				newEvent.setPrivateDate(isHiddenDate != null);
+				newEvent.setPrivateLocation(isHiddenDirection != null);
 				newEvent.setCreator(requester);
-				List<Tags> tags = new ArrayList();
+				List<Tags> tags = new ArrayList<>();
 
 				String[] tagNames = tagsAll.split("\n");
 				for(String tagName : tagNames) {
@@ -150,15 +189,6 @@ public class EventController {
 				newEvent.setTags(tags);
 
 				entityManager.persist(newEvent);
-
-				/*Evaluation.getreviews
-				  User requester = (User)session.getAttribute("u");
-				  if (requester.getId() != target.getCreator().getId() &&
-				  ! requester.hasRole(Role.ADMIN)) {			
-				  response.sendError(HttpServletResponse.SC_FORBIDDEN, 
-				  "No eres administrador, y éste no es tu evento");
-				  }
-				  */
 				return "redirect:/user/" + requester.getId();
 			}
 			return "redirect:/event/newEvent?erno=1";
@@ -299,17 +329,29 @@ public class EventController {
 			tags.append(e.getTags().get(j).getTag() + "\n");
 		}
 
-		ArrayList<Tags> categories = (ArrayList<Tags>) entityManager.createQuery("SELECT t FROM Tags t WHERE t.isCategory IS TRUE")
+		List<Tags> categories = entityManager.createQuery(
+			"SELECT t FROM Tags t WHERE t.isCategory IS TRUE", Tags.class)
 			.getResultList();
+		
+		if(e.checkAccess(requester) == Access.CREATOR) {
+			model.addAttribute("newEvent", true);
+			model.addAttribute("viewEvent", false);
+			model.addAttribute("access", true);
+		}
+		else {
+			model.addAttribute("access", e.checkAccess(requester) == Access.PARTICIPANT);
+			model.addAttribute("newEvent", false);
+			model.addAttribute("viewEvent", true);
+		}
 
 		model.addAttribute("user", requester);
-		model.addAttribute("newEvent", false);
-		model.addAttribute("viewEvent", true);
-
 		model.addAttribute("event", e);
 		model.addAttribute("categoryId", categoryId);
 		model.addAttribute("tags", tags.toString());
 		model.addAttribute("categories", categories);
+		model.addAttribute("action", id);
+		model.addAttribute("buttonName", "Modificar");
+		model.addAttribute("formStyle", "eventContainer formEventoModificar");
 		model.addAttribute("date", e.getDate().format(DateTimeFormatter.ofPattern("yyyy-MM-dd")));
 		return "event_view";
 	}
@@ -317,7 +359,7 @@ public class EventController {
 
 	public void sendMessageWS(final List content, final String type,long id) {
 		log.info("Sending updated " + type + " via websocket");
-		List response = new ArrayList();
+		List<Object> response = new ArrayList<>();
 		response.add(type);
 		switch(type){
 			case "updateMessages":
@@ -332,6 +374,8 @@ public class EventController {
 		}
 		messagingTemplate.convertAndSend("/topic/event/"+id,response);
 	}	
+
+	
 	@PostMapping(path = "/nm/{id}")
 	@Transactional
 	@ResponseBody
@@ -340,9 +384,8 @@ public class EventController {
 		User u = entityManager.find(User.class, Long.parseLong(nodej.get("idU").asText()));
 		LocalDateTime lt = LocalDateTime.now();
 		String text = nodej.get("textMessage").asText();
-		PrivateUtilities privateUtilities = new PrivateUtilities();
-		List<String> wordsToCheck = new ArrayList(List.of(text));
-		if (!privateUtilities.checkStrings(wordsToCheck)){
+		List<String> wordsToCheck = Arrays.asList(text);
+		if (!Utilities.checkStrings(wordsToCheck)){
 			Message ms = new Message(text,u, null, lt, false, e);
 			entityManager.persist(ms);
 			entityManager.flush();
@@ -379,25 +422,43 @@ public class EventController {
 	@Transactional
 	public String postEvent(
 			HttpServletResponse response,
-			@PathVariable long id, 
-			@ModelAttribute Event edited, 
-			Model model, HttpSession session) throws IOException {
+			@PathVariable long id, @RequestParam String name,
+			@RequestParam String description, @RequestParam String date, 
+			@RequestParam String agePreference, @RequestParam String genderPreference,
+			@RequestParam String location, @RequestParam Long category,
+			@RequestParam(value = "isHiddenDate", required = false) String isHiddenDate, 
+			@RequestParam(value = "isHiddenDirection", required = false) String isHiddenDirection,
+			@RequestParam String tagsAll, Model model, HttpSession session) throws IOException {
 		Event target = entityManager.find(Event.class, id);
-		model.addAttribute("event", target);
 
-		User requester = (User)session.getAttribute("u");
-		if (requester.getId() != target.getCreator().getId() &&
-				! requester.hasRole(Role.ADMIN)) {			
-			response.sendError(HttpServletResponse.SC_FORBIDDEN, 
-					"No eres administrador, y éste no es tu evento");
-				}
+		target.setName(name);
+		target.setDescription(description);
+		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+		target.setDate(LocalDate.parse(date, formatter).atStartOfDay());
+		target.setPublicationDate(LocalDateTime.now());
+		target.setLocation(location);
+		target.setAgePreference(agePreference);
+		target.setPrivateDate(isHiddenDate != null);
+		target.setPrivateLocation(isHiddenDirection != null);
+		target.setGenderPreference(genderPreference);
+		List<Tags> tags = new ArrayList();
 
+		String[] tagNames = tagsAll.split("\n");
+		for(String tagName : tagNames) {
+			Tags t = new Tags();
+			t.setisCategory(false);
+			t.setTag(tagName);
+			tags.add(t);
+			entityManager.persist(t);
+		}
 
+		tags.add(entityManager.find(Tags.class, category));
+		target.setTags(tags);
 
-		// copiar todos los campos cambiados de edited a target
+		entityManager.persist(target);
 
-		return "event";
-			}	
+		return "redirect:/event/";
+	}	
 
 	@GetMapping(value="/{id}/photo")
 	public StreamingResponseBody getPhoto(@PathVariable long id, Model model) throws IOException {		
